removed HttpServletRequest request in delete and edit endpoints